<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Deep Proxy - security&amp;fast VPN</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="speed">Speed</string>
    <string name="location2">Location</string>
    <string name="faq2">FAQ</string>
    <string name="connecting...">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate us</string>
    <string name="share_us">Share us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version: %1$s</string>
    <string name="feedback_type">Feedback type*:</string>
    <string name="connection_issue">Connect issue</string>
    <string name="slow_speed">Slow speed</string>
    <string name="others">Others</string>
    <string name="problem_description">Problem Description：</string>
    <string name="send2">SEND</string>
    <string name="attention">Attention</string>
    <string name="address_limit_dialog_content">Due to policy reasons, this service has been suspended in mainland China, thank you for your understanding.\n因政策原因，本服务暂停在中国大陆使用，谢谢谅解。</string>
    <string name="disconnect_vpn_dialog_content">Are you sure you want to disconnect the VPN?</string>
    <string name="cancel2">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="feedback_failed">Your feedback was not sent due to network reasons，do you want try again?</string>
    <string name="feedback_success">Successfully sent! We have received your feedback and thank you for your support！</string>
    <string name="think_app">What do you think of our app?</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="connect_to_protect">Connect to protect your privacy!</string>
    <string name="protect">Protect</string>
    <string name="show_speed_after_connected">Showing uplink download speed after connection！</string>
    <string name="speed_unconnect_content">Improve online security，Conceal the true identity！</string>
    <string name="start_now">Start Now</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="q1">Why do I need a VPN?</string>
    <string name="a1">VPN is Virtual Private Network By using VPN, you can use public Wi-Fi securely, protect your privacy, bypass the web censorship and content surveillance and access to the restricted contents. How to use VPN Touch "CONNECT" button on the homepage. Also please"TRUST THIS APPLICATION"if your device asks for permission.</string>
    <string name="q2">How can VPN protect my data?</string>
    <string name="a2">We use SSL to encrypt your internet data. Your data is undecipherable to prying eyes while in transit. Also, VPN does not log your activities So please feel safe.</string>
    <string name="q3">Why is my connection slow?</string>
    <string name="a3">Maybe due to the wrong server location selection and the current node has a large number of users. It is recommended to change the node and reconnect.</string>
    <string name="report">Report</string>
    <string name="change_server">Change Server</string>
    <string name="smart_location">Smart Location</string>
    <string name="delay_time">Time delay :%1$dms</string>
    <string name="ask_interrupt_connect">Are you sure you want to interrupt the connection?</string>
    <string name="interrupt">Interrupt</string>
    <string name="ask_disconnect">Are you sure you want to disconnect the VPN?</string>
    <string name="change_proxy_content">Are you sure you want to disconnect the VPN and switch %1$s to %2$s?</string>
    <string name="refresh_warning">Refreshing will disconnect the VPN, are you sure?</string>
    <string name="agree">AGREE</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="upgrade">Upgrade</string>
    <string name="guide_content">Click here to start connecting</string>
    <string name="reconnect2">Reconnect</string>
    <string name="splash_privacy">your privacy is important

Please read this policy and the terms and conditions carefully. By choosing to use our services, we may collect the data mentioned in the policy. You confirm that you have read this privacy policy and agree to be bound by it. If you do not agree to the terms of this privacy policy rules, please do not use our services.
We do not collect any personal information, but for a better user experience, we will collect the following information:
1. We may collect location information, and select the best server node for you by obtaining the approximate location, so that you can get a better web browsing experience.
2. We may collect information such as your connection number or connection duration in order to increase connection speed and improve product experience
3. We may collect your interaction data to optimize our UI interaction experience and product design.

See our Privacy Policy for details.</string>
</resources>