<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000012">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:padding="10dp"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/feedback"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/typeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/feedback_type"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/feedbackTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_radio_btn"
                android:button="@null"
                android:gravity="center"
                android:text="@string/connection_issue" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_radio_btn"
                android:button="@null"
                android:gravity="center"
                android:text="@string/slow_speed" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_radio_btn"
                android:button="@null"
                android:gravity="center"
                android:text="@string/others" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/problem_description"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/problemDesc"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit" />

        <TextView
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send2"
            android:background="@drawable/bg_nagetive_btn"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingStart="60dp"
            android:paddingTop="12dp"
            android:clickable="false"
            android:enabled="false"
            android:paddingEnd="60dp"
            android:paddingBottom="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</RelativeLayout>