<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_pop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:src="@mipmap/ic_nor" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/disconnect_vpn_dialog_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp">

            <com.example.c424.view.GradientFrame
                android:id="@+id/negativeBtn"
                app:frameText="@string/cancel2"
                app:frameTextSize="16sp"
                app:frameTextColor="#FFFFFF"
                app:frameStartColor="#08FBBD"
                app:frameEndColor="#E922FE"
                app:frameRectRadius="30dp"
                android:layout_margin="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/positiveBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gradient_btn"
                android:layout_marginStart="15dp"
                android:text="@string/retry"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>