<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000012"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:padding="10dp"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/speed"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_transparent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@mipmap/ic_tips" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/show_speed_after_connected"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/unConnectTipLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="65dp"
                android:gravity="center_horizontal"
                android:text="@string/speed_unconnect_content"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/connectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gradient_btn"
                android:paddingStart="45dp"
                android:paddingTop="12dp"
                android:paddingEnd="45dp"
                android:paddingBottom="12dp"
                android:text="@string/start_now"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/showSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:background="@drawable/bg_upload_speed"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uploadSpeedTv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_speed_show"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@mipmap/ic_up"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/upload"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="138dp"
                android:layout_marginStart="55dp"
                android:layout_weight="1"
                android:background="@drawable/bg_download_speed"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/downloadSpeedTv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/bg_speed_show"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@mipmap/ic_down"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/nativeAdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp" />

    </LinearLayout>


</RelativeLayout>